--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                     <h1 class="display-4">Welcome to Menu MaQ'R</h1>
                     <p class="lead">We can help you build a menu and a QR code for your restaurant.</p>
                     <hr class="my-4">
-                    <a id="signup" class="btn btn-primary btn-lg" href="/signup" role="button">Sign Up</a>
+                    <a id="signup" class="btn btn-primary btn-lg" href="signup.html"  role="button">Sign Up</a>
                 </div>
             </div>
         </div>
@@ -45,6 +45,7 @@
 </div>
 
 <script src="js\login.js"></script>
+
 
 </body>
 
