updated css / added collapse functionality to menu button

--- a/public/signup.html
+++ b/public/signup.html
@@ -22,7 +22,7 @@
                 <input id="email" class="form-control me-2" type="text" placeholder="Username" aria-label="Username">
                 <input id="password" class="form-control me-2" type="password" placeholder="Password"
                     aria-label="Password">
-                <button class="btn btn-outline-secondary" type="submit">Log In</button>
+                <button class="btn btn-outline-secondary loginButton" type="submit">Log In</button>
             </form>
         </div>
     </nav>
@@ -58,7 +58,7 @@
                                 <input type="text" class="form-control" id="lastName" aria-describedby="emailHelp">
                             </div>
     
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="submit" class="btn btn-secondary">Submit</button>
                         </form>
                     </div>
                 </div>
