--- a/public/createMenu.html
+++ b/public/createMenu.html
@@ -48,8 +48,14 @@
                 <h3>Edit Item:</h3>
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Section Name:</label>
-                    <input type="text" class="form-control" id="exampleFormControlInput1"
-                        placeholder="Breakfast, Lunch, Dinner, etc.">
+                    <select name="categories" id="categories">
+                        <option value="apps">Appetizers</option>
+                        <option value="breakfast">Breakfast</option>
+                        <option value="lunch">Lunch</option>
+                        <option value="dinner">Dinner</option>
+                        <option value="drinks">Drinks</option>
+                        <option value="other">Other</option>
+                    </select>
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Dish name:</label>
