--- a/public/createMenu.html
+++ b/public/createMenu.html
@@ -36,7 +36,7 @@
                     <div class="card-header">
                         My Items
                     </div>
-                    <ul class="list-group list-group-flush">
+                    <ul class="list-group list-group-flush menu-items">
                         <li class="list-group-item">placeholder 1</li>
                         <li class="list-group-item">placeholder 2</li>
                         <li class="list-group-item">placeholder 3</li>
@@ -65,6 +65,9 @@
                 <div class="mb-3">
                     <label for="exampleFormControlTextarea1" class="form-label">Dish Description:</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
+                </div>
+                <div class="mb-3">
+                    <button id="add-item" class="btn btn-primary btn-lg" type="submit">Add Item</button>
                 </div>
             </div>
         </div>
