--- a/public/createMenu.html
+++ b/public/createMenu.html
@@ -59,19 +59,21 @@
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Dish name:</label>
-                    <input type="text" class="form-control" id="exampleFormControlInput1"
+                    <input type="text" class="form-control" id="dish-name"
                         placeholder="Huevos Rancheros, Mom's Spaghetti, etc.">
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlTextarea1" class="form-label">Dish Description:</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
+                    <textarea class="form-control" id="description" rows="4"></textarea>
                 </div>
                 <div class="mb-3">
                     <button id="add-item" class="btn btn-primary btn-lg" type="submit">Add Item</button>
+                    <button id="finish-menu" class="btn btn-primary btn-lg" type="submit">Finish Menu</button>
                 </div>
             </div>
         </div>
     </div>
+    <script src="js/createMenu.js"></script>
 </body>
 
 </html>
