--- a/public/userHome.html
+++ b/public/userHome.html
@@ -54,6 +54,38 @@
                                         <div class="card-body">
                                             <h3>{{menuName}}</h3>
                                             <button data-bs-toggle='collapse' data-bs-target="#menu-name" class="btn btn-outline-secondary" type="submit">Edit Menu</button>
+                                            <!-- ADDED BY REAGAN FOR BACKEND STUFF, FEEL FREE TO MODIFY -->
+                                <!-- Button trigger modal -->
+                                <button type="button" class="btn btn-primary" data-toggle="modal"
+                                    data-target="#createMenu">
+                                    Create Menu
+                                </button>
+                                
+                                <!-- Modal -->
+                                <div class="modal fade" id="createMenu" tabindex="-1" role="dialog"
+                                    aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title" id="exampleModalLabel">Menu Name</h5>
+                                                <button type="button" class="close" data-dismiss="modal"
+                                                    aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <label for="menu-name">What is the name of the Menu?</label>
+                                                <br>
+                                                <input type="text" id="menu-name">
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary"
+                                                    data-dismiss="modal">Close</button>
+                                                <button type="button" class="btn btn-primary" id="start-menu">Start Menu</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                                             <div id='menu-name' class='collapse'>
                                                     <!-- placeholder information, ids, etc. still need to be updated-->
                                                     <h3 class="edit-item">Edit Item:</h3>
