Updated a missing bracket in css preventing the chef photo from working

--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,9 @@
         </div>
 
         <div class="col-md-3">
-            <img src="images/chef.jpg" alt="photo of chefs working in the kitchen" id="chef-photo">
+            <img src="images/chef.jpg" alt="photo of chefs working in the kitchen" id="chefphoto">
         </div>
+
     </div>
 </div>
 
