Updated all pages with our logo

--- a/public/userHome.html
+++ b/public/userHome.html
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand">Menu MaQ'R</a>
+            <img src="images/logo.png" alt="Menu Maqr's Logo">
             <form class="d-flex" id="login">
                 <input id="email" class="form-control me-2" type="text" placeholder="Username" aria-label="Username">
                 <input id="password" class="form-control me-2" type="password" placeholder="Password"
