--- a/public/userHome.html
+++ b/public/userHome.html
@@ -102,7 +102,7 @@
                                             <div class="modal-body">
                                                 <label for="menu-name">What is the name of the Menu?</label>
                                                 <br>
-                                                <input type="text" id="menu-name">
+                                                <input type="text" id="newMenu">
                                             </div>
 
                                             <div class="modal-footer">
