Updated logo to match

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <!-- <a class="navbar-brand">Menu MaQ'R</a> -->
-            <a href="index.html"><img src="images/logo.png" alt="Menu Maqr's Logo"></a>
+            <a href="index.html"><img src="images/logored.png" alt="Menu Maqr's Logo"></a>
             <form class="d-flex" id="login">
                 <input id="email" class="form-control me-2" type="text" placeholder="Username" aria-label="Username">
                 <input id="password" class="form-control me-2" type="password" placeholder="Password"
