--- a/public/userHome.html
+++ b/public/userHome.html
@@ -45,7 +45,7 @@
                 <div class="col-md-9">
                     <div class="card">
                         <div class="card-body">
-                            <h1> Hi, Frank!</h1>
+                            <h1 id='first-name'> Hi, Frank!</h1>
                             <br>
 
                             <h2>Created Menus</h2>
@@ -54,29 +54,32 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="card" id="menuName">
-                                        <div class="card-body">
-                                            <h3>El Toro Tex Mex</h3>
-                                            <button data-bs-toggle='collapse' data-bs-target="#menu-name" class="btn btn-outline-secondary editBtn" type="submit">Edit Menu</button>
+                                        <ul id="menus">
+                                            <li class="card-body">
+                                                <h3>El Toro Tex Mex</h3>
+                                                <button data-bs-toggle='collapse' data-bs-target="#menu-name" class="btn btn-outline-secondary editBtn" type="submit">Edit Menu</button>
+                                            </li>
+                                        </ul>
+                                            
                         
-                                            <div id='menu-name' class='collapse'>
+                                            <!-- <div id='menu-name' class='collapse'> -->
                                                     <!-- placeholder information, ids, etc. still need to be updated-->
-                                                    <h3 class="edit-item">Edit Item:</h3>
-                                                    <div class="mb-3">
-                                                        <label for="exampleFormControlInput1" class="form-label">Section Name:</label>
-                                                        <input type="text" class="form-control" id="exampleFormControlInput1"
-                                                            placeholder="Breakfast, Lunch, Dinner, etc.">
-                                                    </div>
-                                                    <div class="mb-3">
-                                                        <label for="exampleFormControlInput1" class="form-label">Dish name:</label>
-                                                        <input type="text" class="form-control" id="exampleFormControlInput2"
-                                                            placeholder="Huevos Rancheros, Mom's Spaghetti, etc.">
-                                                    </div>
-                                                    <div class="mb-3">
-                                                        <label for="exampleFormControlTextarea1" class="form-label">Dish Description:</label>
-                                                        <textarea class="form-control" id="exampleFormControlTextarea3" rows="4"></textarea>
-                                                    </div>
-                                            </div>
-                                        </div>
+                                                    <!-- <h3 class="edit-item">Edit Item:</h3> -->
+                                                    <!-- <div class="mb-3"> -->
+                                                        <!-- <label for="exampleFormControlInput1" class="form-label">Section Name:</label> -->
+                                                        <!-- <input type="text" class="form-control" id="exampleFormControlInput1" -->
+                                                            <!-- placeholder="Breakfast, Lunch, Dinner, etc."> -->
+                                                    <!-- </div> -->
+                                                    <!-- <div class="mb-3"> -->
+                                                        <!-- <label for="exampleFormControlInput1" class="form-label">Dish name:</label> -->
+                                                        <!-- <input type="text" class="form-control" id="exampleFormControlInput2" -->
+                                                            <!-- placeholder="Huevos Rancheros, Mom's Spaghetti, etc."> -->
+                                                    <!-- </div> -->
+                                                    <!-- <div class="mb-3"> -->
+                                                        <!-- <label for="exampleFormControlTextarea1" class="form-label">Dish Description:</label> -->
+                                                        <!-- <textarea class="form-control" id="exampleFormControlTextarea3" rows="4"></textarea> -->
+                                                    <!-- </div> -->
+                                            <!-- </div> -->
                                     </div>
 
 
@@ -151,6 +154,7 @@
 
     <script src="js/getUserData.js"></script>
     <script src="js/getMenuName.js"></script>
+    <script src="js/getCreatedMenus.js"></script>
 </body>
 
 </html>
