--- a/public/createMenu.html
+++ b/public/createMenu.html
@@ -67,6 +67,10 @@
                     <textarea class="form-control" id="description" rows="4"></textarea>
                 </div>
                 <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Dish Price:</label>
+                    <textarea class="form-control" id="price" rows="1"></textarea>
+                </div>
+                <div class="mb-3">
                     <button id="add-item" class="btn btn-primary btn-lg" type="submit">Add Item</button>
                     <button id="finish-menu" class="btn btn-primary btn-lg" type="submit">Finish Menu</button>
                 </div>
