edit menu button works

--- a/public/userHome.html
+++ b/public/userHome.html
@@ -155,6 +155,7 @@
     <script src="js/getUserData.js"></script>
     <script src="js/getMenuName.js"></script>
     <script src="js/getCreatedMenus.js"></script>
+    <script src="js/editMenu.js"></script>
 </body>
 
 </html>
