--- a/public/createMenu.html
+++ b/public/createMenu.html
@@ -70,9 +70,12 @@
                     <button id="add-item" class="btn btn-primary btn-lg" type="submit">Add Item</button>
                     <button id="finish-menu" class="btn btn-primary btn-lg" type="submit">Finish Menu</button>
                 </div>
+                <canvas id="canvas"></canvas>
+
             </div>
         </div>
     </div>
+    <script src="js/bundle.js"></script>
     <script src="js/createMenu.js"></script>
     <script src="js/getUserData.js"></script>
 </body>
