--- a/public/userHome.html
+++ b/public/userHome.html
@@ -22,6 +22,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -57,6 +58,7 @@
                                         <ul id="menus">
                                             <li class="card-body">
                                                 <h3>El Toro Tex Mex</h3>
+                                                <button data-bs-toggle='collapse' data-bs-target="#menu-name" class="btn btn-outline-secondary editBtn" type="submit">Edit Menu</button>
                                                 <button data-bs-toggle='collapse' data-bs-target="#menu-name" class="btn btn-outline-secondary editBtn" type="submit">Edit Menu</button>
                                             </li>
                                         </ul>
@@ -137,7 +139,7 @@
                             <!-- IMPORTANT **** Update VARIABLES HERE in Handlebars-->
                             <div class="row">
                                 <div class="col-md-12">
-                                    <div class="card">
+                                    <div class="card qrcard">
                                         <div class="card-body">
                                             <h3>{{qrCode}}</h3>
                                         </div>
