start generate menus

--- a/public/menus/1.html
+++ b/public/menus/1.html
@@ -101,6 +101,6 @@
                 </div>
             </div>
         </div>
-        <script src="js/generateMenu.js"></script>
+        <script src="../js/generateMenu.js"></script>
 </body>
 </html>
