--- a/public/menus/1.html
+++ b/public/menus/1.html
@@ -38,6 +38,21 @@
                                 <h2 id="apps">Appetizers</h2>
                                 <ul id="apps-list">
                                     <li>
+                                        <h3 class="dish-name">Queso</h3>
+                                        <h4 class="price">3.99</h4>
+                                        <p>Warm delicious cheese</p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-12 card menucard">
+                            <div class="card-body">
+                                <h2 id="breakfast">Breakfast</h2>
+                                <ul id="break-list">
+                                    <li>
                                         <h3><span class="dish-name">Queso</span></h3>
                                         <h4 class="price">3.99</h4>
                                         <p>Warm delicious cheese</p>
@@ -52,7 +67,7 @@
                         <div class="col-md-12 card menucard">
                             <div class="card-body">
                                 <h2 id="lunches">Lunch</h2>
-                                <ul id="apps-list">
+                                <ul id="lunch-list">
                                     <li>
                                         <h3><span class="dish-name">Queso</span></h3>
                                         <h4 class="price">3.99</h4>
