--- a/public/editMenu.html
+++ b/public/editMenu.html
@@ -71,8 +71,8 @@
                     <textarea class="form-control" id="price" rows="1"></textarea>
                 </div>
                 <div class="mb-3">
-                    <button id="add-item" class="btn btn-primary btn-lg" type="submit">Add Item</button>
-                    <button id="finish-menu" class="btn btn-primary btn-lg" type="submit">Finish Menu</button>
+                    <button id="add-item" class="btn btn-secondary btn-lg" type="submit">Add Item</button>
+                    <button id="finish-menu" class="btn btn-secondary btn-lg" type="submit">Finish Menu</button>
                 </div>
             </div>
         </div>
