--- a/public/userHome.html
+++ b/public/userHome.html
@@ -89,7 +89,7 @@
 
                                 <!-- ADDED BY REAGAN FOR BACKEND STUFF, FEEL FREE TO MODIFY -->
                                 <!-- Button trigger modal -->
-                                <button type="button" class="btn btn-primary createBtn" data-toggle="modal"
+                                <button type="button" class="btn btn-secondary createBtn" data-toggle="modal"
                                 data-target="#createMenu">
                                 Create Menu
                                 </button>
@@ -116,7 +116,7 @@
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary"
                                                     data-dismiss="modal">Close</button>
-                                                <button type="button" class="btn btn-primary" id="start-menu">Start Menu</button>
+                                                <button type="button" class="btn btn-secondary" id="start-menu">Start Menu</button>
                                             </div>
                                         </div>
                                     </div>
