--- a/public/userHome.html
+++ b/public/userHome.html
@@ -140,9 +140,14 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="card qrcard">
-                                        <div class="card-body">
-                                            <h3>{{qrCode}}</h3>
-                                        </div>
+                                        <ul class="card-body" id="qr-list">
+                                            <li style="list-style-type: none;">
+                                                <h3>Menu Name</h3>
+                                                <div class="qr-code">
+
+                                                </div>
+                                            </li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
@@ -157,6 +162,7 @@
     <script src="js/getUserData.js"></script>
     <script src="js/getMenuName.js"></script>
     <script src="js/getCreatedMenus.js"></script>
+    <script src="js/getQRcodes.js"></script>
     <script src="js/editMenu.js"></script>
 </body>
 
