--- a/public/userHome.html
+++ b/public/userHome.html
@@ -132,7 +132,7 @@
     
                 <!-- QR Codes Dashbaord -->
                 <div class="col-md-3">
-                    <div class="card">
+                    <div class="card qrmaincard">
                         <div class="card-body">
                             <h2>QR Codes</h2>
                             <!-- Have handlebars for created QR's so they're listed here -->
